<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.LoginActivity">

    <!--Icon Image-->
    <ImageView
        android:id="@+id/bookIconImageView"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:src="@drawable/ic_lancher" />
    <!--App Name-->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookIconImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/login_AppName"
        android:textColor="@color/Dark_Green"
        android:textSize="@dimen/_10ssp" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_below="@+id/appName"
        android:layout_margin="20dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:colorAccent = "@color/Dark_Green"/>

    <!--Login Activity Content-->
    <RelativeLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone">

        <!--Welcome Text-->
        <TextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/Dark_Green"
            android:textSize="@dimen/_16ssp" />
        <!--App Name-->
        <TextView
            android:id="@+id/readItTogetherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTextView"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/Dark_Green"
            android:textSize="@dimen/_10ssp" />
        <!--UserName&&Password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/loginButton"
            android:layout_below="@+id/readItTogetherTextView"
            android:gravity="center"
            android:orientation="vertical">

            <!--Email Filed-->
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_16ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Password Filed-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_16ssp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Remember me && Forget password-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remember"
                    android:textColor="@color/Dark_Green"
                    android:textSize="@dimen/_12ssp"/>

                <TextView
                    android:id="@+id/forgetPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/forget_password"
                    android:textSize="@dimen/_12ssp"/>

            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/guide"
            android:layout_marginBottom="5dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@color/Dark_Green"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="@dimen/_16ssp" />

        <ProgressBar
            android:id="@+id/LoginProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-4dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>