<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="@dimen/CardView_Radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Date Text Filed-->
            <Button
                android:id="@+id/WeeklyPlan_Date_Button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/daily_visit_date"
                android:textAlignment="viewStart"
                app:icon="@drawable/ic_baseline_date_range_24"
                android:textColor="@color/Dark_Green"
                app:layout_constraintBottom_toTopOf="@+id/Daily_Visit_AM_TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"/>
            <!--AM/PM-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Daily_Visit_AM_TextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/daily_visit_AM_PM"
                app:layout_constraintBottom_toTopOf="@+id/Daily_Visit_Hospital_TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WeeklyPlan_Date_Button">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/daily_visit_AM"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_20ssp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Choose a Hospital-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Daily_Visit_Hospital_TextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/daily_visit_hospital"
                android:enabled="false"
                app:layout_constraintBottom_toTopOf="@+id/Daily_visit_Area_TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Daily_Visit_AM_TextInputLayout">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/daily_visit_hospital"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_20ssp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Choose an Area-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Daily_visit_Area_TextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/daily_visit_area"
                android:enabled="false"
                app:layout_constraintBottom_toTopOf="@+id/Daily_Visit_Doctor_TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Daily_Visit_Hospital_TextInputLayout">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/daily_visit_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_20ssp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Choose a Doctor-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Daily_Visit_Doctor_TextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/daily_visit_doctor"
                android:enabled="false"
                app:layout_constraintBottom_toTopOf="@+id/Comment_TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Daily_visit_Area_TextInputLayout">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/daily_visit_doctor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_20ssp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Comment-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Comment_TextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/daily_visit_comment"
                app:layout_constraintBottom_toTopOf="@+id/Location_Visit_Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Daily_Visit_Doctor_TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/daily_visit_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_20ssp"
                    android:textAlignment="viewStart"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Get Current Location Option-->
            <Button
                android:id="@+id/Location_Visit_Button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Save_Location"
                android:textColor="@color/Dark_Green"
                app:layout_constraintBottom_toTopOf="@+id/daily_visit_create_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Comment_TextInputLayout"/>
            <!--Save / Create Button-->
            <Button
                android:id="@+id/daily_visit_create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/Dark_Green"
                android:text="@string/daily_visit_button"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:enabled="false"
                app:layout_constraintBottom_toTopOf="@+id/WeeklyPlan_Date_Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Location_Visit_Button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>